--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "MinimalMongodb": "git+https://git.ans.aero/Libs/MinimalMongodb.git",
+    "PrepareWords": "git+https://git.ans.aero/Libs/PrepareWords.git",
+    "fast-xml-parser": "^3.19.0",
     "mssql": "^6.3.1"
   },
   "license": "GPL-3.0-or-later",
