--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "MinimalMongodb": "git+https://git.ans.aero/Libs/MinimalMongodb.git",
     "PrepareWords": "git+https://git.ans.aero/Libs/PrepareWords.git",
+    "async": "^3.2.0",
     "fast-xml-parser": "^3.19.0",
     "he": "^1.2.0",
     "mssql": "^6.3.1"
