chk all imported

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "async": "^3.2.0",
     "fast-xml-parser": "^3.19.0",
     "he": "^1.2.0",
-    "mssql": "^6.3.1"
+    "mssql": "^6.3.1",
+    "optimist": "^0.6.1"
   },
   "license": "GPL-3.0-or-later",
   "main": "importDv.js",
